[NEW] odoo.conf inclusão do módulo web e ajustes do arquivo.

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,8 +1,10 @@
 [options]
-addons_path = ./odoo/addons,./odoo/odoo/addons
-admin_passwd = $pbkdf2-sha512$25000$Pse4txZCyJlzrpWSMgZA6A$PbYJgvfTFpBD6owqdsJPmubhPPGAvQJ/GYf.Luwn.kMdpDjJQob1Weapk4ASH1nsnRseNMdltPEvyHKPW62Aeg
+addons_path = ./odoo/addons,
+	./odoo/odoo/addons,
+	./web
+admin_passwd = admin
 csv_internal_sep = ,
-data_dir = /home/manoel/.local/share/Odoo
+data_dir = ~/.local/share/Odoo
 db_host = False
 db_maxconn = 64
 db_name = False
