--- a/odoo.conf
+++ b/odoo.conf
@@ -1,7 +1,8 @@
 [options]
 addons_path = ./odoo/addons,
 	./odoo/odoo/addons,
-	./web
+	./web,
+	./private
 admin_passwd = admin
 csv_internal_sep = ,
 data_dir = ~/.local/share/Odoo
